# wd_interpolator

./: MANIFEST.in  pyproject.toml
interpolator/: __init__.py  fit.py  interpolator.py  utils.py
interpolator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
interpolator/atmos/: __init__.py  sed.py  spectrum.py
interpolator/atmos/bandpasses/: Gaia_BP.npy  Gaia_G.npy  Gaia_RP.npy  JPLUS_F0378.npy  JPLUS_F0395.npy  JPLUS_F0410.npy  JPLUS_F0430.npy  JPLUS_F0515.npy  JPLUS_F0660.npy  JPLUS_F0861.npy  JPLUS_J0378.npy  JPLUS_J0395.npy  JPLUS_J0410.npy  JPLUS_J0430.npy  JPLUS_J0515.npy  JPLUS_J0660.npy  JPLUS_J0861.npy  JPLUS_gSDSS.npy  JPLUS_iSDSS.npy  JPLUS_rSDSS.npy  JPLUS_uJAVA.npy  JPLUS_uJava.npy  JPLUS_zSDSS.npy  PS1_g.npy  PS1_i.npy  PS1_r.npy  PS1_y.npy  PS1_z.npy  SDSS_g.npy  SDSS_i.npy  SDSS_r.npy  SDSS_u.npy  SDSS_z.npy  convert.ipynb
interpolator/atmos/bandpasses/temp/: JPLUS_J0378.txt  JPLUS_J0395.txt  JPLUS_J0410.txt  (+15 more)
interpolator/atmos/reference/: alpha_lyr_stis_002.fits
interpolator/data/1d_da_nlte/: cache_table.csv
interpolator/data/1d_db_nlte/: 700_020_ML125  700_050_ML125  700_080_ML125  700_300_ML125  750_020_ML125  750_050_ML125  750_080_ML125  750_300_ML125  800_020_ML125  800_050_ML125  800_080_ML125  800_300_ML125  850_020_ML125  850_050_ML125  850_080_ML125  850_300_ML125  900_020_ML125  900_050_ML125  900_080_ML125  900_300_ML125
interpolator/data/laplata/: allwd_Hdef.csv  formatter.ipynb
util/: buildcache.ipynb  example_object.csv  example_object_no_reddening.csv  test_fitting.ipynb  test_fitting_fnu.ipynb
util/data/: passbands.fits
